Added controller and service implementation
